// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plan Picker:  Render Function renders 1`] = `
<div
  className="PlanPicker"
>
  <div
    className="TriggerHeader"
    onClick={[Function]}
    plan={
      Object {
        "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
        "overage": 0.4,
        "plan": "2.5M-0817",
        "price": 899,
        "product": "messaging",
        "volume": 2500000,
      }
    }
  >
    <span>
      Select A Plan
    </span>
    <ExpandMore
      className="Chevron"
      size={24}
    />
  </div>
  <div
    className="PlanContainer"
  >
    <div
      className="DropdownLabel"
    >
      Premier
    </div>
    <Plan
      className="TriggerPlan"
      onClick={[Function]}
      plan={
        Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        }
      }
      planPriceProps={
        Object {
          "selectedPromo": undefined,
        }
      }
    />
    <input
      className="Input"
      readOnly={true}
    />
    <div
      className="List"
    >
      <div
        className="DropdownLabel"
        key="label_test"
      >
        Test Account
        :
      </div>
      <Plan
        className="DropdownPlan"
        index={0}
        item={
          Object {
            "bundle": "free500-0419",
            "messaging": Object {
              "plan": "free500-0419",
              "price": 0,
              "product": "messaging",
              "volume": 500,
            },
            "products": Array [
              Object {
                "plan": "free500-0419",
                "product": "messaging",
              },
            ],
            "status": "public",
            "tier": "test",
            "type": "messaging",
          }
        }
        key="0"
        plan={
          Object {
            "plan": "free500-0419",
            "price": 0,
            "product": "messaging",
            "volume": 500,
          }
        }
      />
    </div>
  </div>
  <div
    className="TierPlansInfo"
  >
    <span>
      Interested in learning more about our Starter and Premier plans? Check out our
       
    </span>
    <ExternalLink
      to="https://www.sparkpost.com/docs/faq/difference-between-starter-and-premier"
    >
      Knowledge Base
    </ExternalLink>
  </div>
</div>
`;

exports[`Plan Picker:  renders correctly 1`] = `
<Field
  bundles={
    Array [
      Object {
        "bundle": "free500-0419",
        "messaging": Object {
          "plan": "free500-0419",
          "price": 0,
          "product": "messaging",
          "volume": 500,
        },
        "products": Array [
          Object {
            "plan": "free500-0419",
            "product": "messaging",
          },
        ],
        "status": "public",
        "tier": "test",
        "type": "messaging",
      },
      Object {
        "bundle": "2.5M-0817",
        "messaging": Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        },
        "products": Array [
          Object {
            "plan": "2.5M-0817",
            "product": "messaging",
          },
        ],
        "status": "secret",
        "tier": "premier",
        "type": "messaging",
      },
    ]
  }
  component={[Function]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  name="planpicker"
/>
`;

exports[`Plan Picker:  renders correctly with an initial value 1`] = `
<Field
  bundles={
    Array [
      Object {
        "bundle": "free500-0419",
        "messaging": Object {
          "plan": "free500-0419",
          "price": 0,
          "product": "messaging",
          "volume": 500,
        },
        "products": Array [
          Object {
            "plan": "free500-0419",
            "product": "messaging",
          },
        ],
        "status": "public",
        "tier": "test",
        "type": "messaging",
      },
      Object {
        "bundle": "2.5M-0817",
        "messaging": Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        },
        "products": Array [
          Object {
            "plan": "2.5M-0817",
            "product": "messaging",
          },
        ],
        "status": "secret",
        "tier": "premier",
        "type": "messaging",
      },
    ]
  }
  component={[Function]}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Object {
        "bundle": "2.5M-0817",
        "messaging": Object {
          "billing_id": "2c92c0f85d7d53d6015d80ed8f2b0ce5",
          "overage": 0.4,
          "plan": "2.5M-0817",
          "price": 899,
          "product": "messaging",
          "volume": 2500000,
        },
        "products": Array [
          Object {
            "plan": "2.5M-0817",
            "product": "messaging",
          },
        ],
        "status": "secret",
        "tier": "premier",
        "type": "messaging",
      },
    }
  }
  name="planpicker"
/>
`;
